<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout

        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_marginStart="@dimen/_14sdp"
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_14sdp"
            android:includeFontPadding="false"
            android:text="Add task"
            android:textColor="@color/white" />




    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_14sdp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@android:color/transparent"

                    android:background="@android:color/transparent"
                    app:errorTextAppearance="@style/error_appearance"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/etFirstName"
                        style="@style/Edittext"
                        android:hint="@string/first_name"
                        android:inputType="textCapSentences"
                        android:maxLength="20"
                        android:textSize="@dimen/_12sdp" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/error_appearance"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/etLastname"
                        style="@style/Edittext"
                        android:hint="@string/last_name"
                        android:inputType="textCapSentences"
                        android:maxLength="20"

                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/error_appearance"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/etEmailAddress"
                        style="@style/Edittext_Email"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLength="30"

                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlAddressName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/error_appearance"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/etAddressName"
                        style="@style/Edittext"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:maxLength="30"

                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tvGender"
                    style="@style/textBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Gender">

                </TextView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tvGender"
                    android:elevation="@dimen/_8sdp"
                    android:visibility="visible"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardUseCompatPadding="true">

                    <RadioGroup

                        android:id="@+id/radioType"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_out"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/toggle_bg"
                            android:button="@null"
                            android:checked="true"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingLeft="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:text="Male"
                            android:textAlignment="center"
                            android:textColor="@drawable/textcolor_selector"
                            android:textSize="@dimen/_12sdp" />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/toggle_bg_female"
                            android:button="@null"

                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingLeft="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:text="Female"
                            android:textAlignment="center"
                            android:textColor="@drawable/textcolor_selector"
                            android:textSize="@dimen/_12sdp" />

                    </RadioGroup>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/ivCamera"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentRight="true"
                    android:background="@android:drawable/ic_menu_camera"
                    android:backgroundTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tvProfile"
                    style="@style/textBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profile photo" />

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile"
                    android:visibility="gone"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_below="@+id/tvProfile"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:elevation="2dp"
                    android:scaleType="centerCrop" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/error_appearance"
                    app:hintEnabled="true"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/etDescription"
                        style="@style/Edittext"
                        android:hint="@string/description"
                        android:inputType="text"
                        android:maxLength="20"
                        android:textSize="@dimen/_12sdp" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnContinue"
                    style="@style/gradientButtonStyle"

                    android:text="Submit" />


            </RelativeLayout>




        </LinearLayout>
    </ScrollView>


</RelativeLayout>